# threeBrainPy

./: .gitignore  404.html  AUTHORS  CONTRIBUTE.md  LICENSE.txt  MANIFEST.in  Pipfile  README.md  example.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  webpack.config.js
api-core-brain/: index.html
api-core-mat44/: index.html
api-core-vec3/: index.html
api-utils/: index.html
docs/: api-core-brain.md  api-core-mat44.md  api-core-vec3.md  api-utils.md  getting-started.md  index.md  showcase.md
docs/showcase-viewer/: index.html
examples/: introduction.ipynb
getting-started/: index.html
search/: search_index.json
showcase/: index.html
showcase-viewer/: electrodes.csv  index.html
showcase-viewer/lib/threebrain_data-0/: config_d827e4d78a8b3592b0d2eaf2de5b875e.json
site/: objects.inv  requirements.txt
src/lib/: extension.js  index.js  labplugin.js  widget.js
threeBrainPy/: __init__.py  _version.py
threeBrainPy/core/: __init__.py  brain.py  colormap.py  constants.py  geom_datacube.py  keyframe.py  mat44.py  vec3.py
threeBrainPy/extensions/: widget.py
threeBrainPy/extensions/labextension/: package.json
threeBrainPy/extensions/nbextension/: index.js  (+2 more)
threeBrainPy/geom/: __init__.py  blank.py  datacube.py  geometry.py  group.py  sphere.py  surface.py
threeBrainPy/templates/: __init__.py
threeBrainPy/utils/: __init__.py  color.py  constants.py  readxfm.py  serializer.py  service.py  temps.py  validator.py  volume.py
threebrainpy/: _version.py
threebrainpy/core/: __init__.py  brain.py  colormap.py  geom_datacube.py  geom_sphere.py  geom_surface.py  geom_template.py  group.py  mat44.py  vec3.py
threebrainpy/extensions/: __init__.py  widget.py
threebrainpy/templates/: index.html  redirect.html
threebrainpy/utils/: __init__.py  service.py  volume.py
threebrainpy_bak/: __init__.py
threebrainpy_bak/core/: geom_placeholder.py  geom_sphere.py  vec3.py
threebrainpy_bak/extensions/: shiny.py
threebrainpy_bak/utils/: readxfm.py  serializer.py
(+43 files in other folders)
