[metadata]
name = threebrainpy
license = Mozilla Public License 2.0 (MPL 2.0)
license_files = LICENSE.txt
author = Zhengjia Wang
author_email=dipterix.wang@gmail.com
version = attr: threebrainpy.__version__
description = A 3D VBrain Viewer for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipterix/threeBrainPy
keywords = iEEG, DBS, Visualization, Neuroscience, Electrophysiology, Electrode, Localizer, ipython, widgets, Jupyter, JupyterLab, JupyterLab3
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3

[bdist_wheel]
universal = 0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6.0,<9
    numpy
    nibabel
python_requires = >=3.8
