[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal = 0

[metadata]
name = threebrainpy
author = Zhengjia Wang
author_email=dipterix.wang@gmail.com
version = attr: threebrainpy.__version__
description = Your Advanced Electrode Localizer Viewer for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipterix/threebrainpy
keywords = iEEG, DBS, Visualization, Neuroscience, Electrophysiology, Electrode, Localizer
license = Mozilla Public License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

